@@ -50,10 +50,11 @@
   <office:body>\n
     <office:spreadsheet>\n
 \n
-      <tal:block tal:define="report_item_list python:report_method();\n
+      <tal:block tal:define="rendered_report_item_list rendered_report_item_list | python:[];\n
+                             report_item_list python: rendered_report_item_list or report_method();\n
                              dummy python: request.set(\'here\', here);\n
                              global sheet_per_reportsection python: int(request.get(\'sheet_per_report_section\', 0));\n
-                             global column_len python:5">\n
+                             global column_len python: 5">\n
                              <!-- TODO: calculate column_len based on the first listbox (or selection_column if exists)-->\n
 \n
       <tal:block tal:define="portal_object here/portal_url/getPortalObject">\n
@@ -66,15 +67,26 @@
 \n
           <tal:block metal:use-macro="here/form_view/macros/form_layout"/>\n
 \n
+                <!-- if we are called with a rendered_report_item_list, just insert the rendered text here. -->\n
+                <tal:block tal:condition="rendered_report_item_list">\n
+                  <tal:block tal:repeat="report_item report_item_list">\n
+                    <tal:block tal:replace="structure report_item"/>\n
+                  </tal:block>\n
+                </tal:block>\n
+\n
+                 <tal:block tal:condition="not: rendered_report_item_list">\n
+\n
             <tal:block tal:repeat="report_item report_item_list">\n
               <tal:block metal:define-macro="make_report_item_table"\n
                          tal:define="here python:report_item.getObject(portal_object);\n
                                      dummy python:report_item.pushReport(portal_object)">\n
+                <tal:block metal:define-macro="render_report_section">\n
                 <tal:block tal:condition="report_item/getTitle">\n
                   <table:table-row table:style-name=\'ro2\'>\n
-                    <tal:block tal:condition="report_item/getTitle" tal:define="level report_item/getLevel">\n
+                    <tal:block tal:condition="report_item/getTitle" tal:define="level report_item/getLevel;\n
+                                                                                column_len column_len | python: 5">\n
                         <table:table-cell table:style-name="report-title"\n
-                                          tal:attributes="table:number-columns-spanned python:column_len;\n
+                                          tal:attributes="table:number-columns-spanned python: column_len;\n
                                                           table:style-name python:test(level&gt;1, \'report-title%s\' % level, \'report-title\');" \n
                                           office:value-type=\'string\'\n
                                           table:number-rows-spanned=\'1\'>\n
@@ -93,8 +105,11 @@
                       </tal:block>\n
                     </tal:block>\n
                   </tal:block>\n
-                  <tal:block tal:define="dummy python:report_item.popReport(portal_object)"/>\n
+                  <tal:block tal:define="portal_object here/portal_url/getPortalObject;\n
+                                         dummy python:report_item.popReport(portal_object)"/>\n
                 </tal:block>\n
+                </tal:block>\n
+              </tal:block>\n
               </tal:block>\n
             </table:table>\n
           </tal:block>\n
